<resources>
    <string name="app_name">Registerlogin</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_account">Tidak punya akun?</string>
    <string name="punya_account">punya akun?</string>
    <string name="logout">logout</string>
    <string name="last">last name</string>
    <string name="first">first name</string>
    <string name="register">register</string>
</resources>